# dentistry-registry-c

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: README.md
infra/: .env.example  README.md
infra/k8s/: api-deployment.yaml  configmap.yaml  db-statefulset.yaml  frontend-deployment.yaml  kustomization.yaml  secrets.yaml
stitch_dentistry_search/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
stitch_dentistry_search/api/src/stitch_dentistry_api/: __init__.py  availability.py  billing.py  config.py  db.py  main.py  migrations.py  models.py  notifications.py  seeding.py
stitch_dentistry_search/api/src/stitch_dentistry_api/routers/: __init__.py  appointments.py  billing.py  chat.py  dentistry.py  knowledge_base.py  services.py  staff.py
stitch_dentistry_search/api/tests/: conftest.py  test_appointments.py  test_availability_utils.py  test_billing.py  test_chat.py  test_dentistry.py  test_health.py
stitch_dentistry_search/appointment_booking_calendar/: code.html
stitch_dentistry_search/appointment_confirmation/: code.html
stitch_dentistry_search/dentistry_profile/: code.html
stitch_dentistry_search/dentistry_registration/: code.html
stitch_dentistry_search/dentistry_search_1/: code.html
stitch_dentistry_search/dentistry_search_2/: code.html
stitch_dentistry_search/dentistry_search_3/: code.html
stitch_dentistry_search/mobile/: .env.example  .eslintrc.cjs  jest.config.js  package.json  tsconfig.json
stitch_dentistry_search/patient_dashboard/: code.html
(+67 files in other folders)
