[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stitch-dentistry-api"
version = "0.1.0"
description = "FastAPI scaffold for Stitch Dentistry"
authors = [{ name = "Stitch Dentistry", email = "engineering@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.29.0",
  "pydantic-settings==2.2.1"
]

[project.optional-dependencies]
dev = [
  "httpx==0.27.0",
  "pytest==8.1.1",
  "ruff==0.4.3"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "PL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
test = "pytest"
serve = "uvicorn stitch_dentistry_api.main:app --reload"
